Ajout des stats regionales (#106)
* Ajout des routes /regionales

* Recalcul des taux avec les règles

* Modification des params cli pour importer les stats

* Suppresion des taux indisponibles

* Renommage des utils mongo

* Mise à jour de la doc Swagger

* Ajout des tests sur les stats de région

* Ajout de getMillesimes
