# server/src/common/stats/cfd.js
@@ -1,13 +1,11 @@
 import { buildWidget, isWidgetAvailable, prepareStatsForWidget } from "../../http/widget/widget.js";
-import { certificationsStats } from "../db/collections/collections.js";
 import Boom from "boom";
 import { omitNil } from "../utils/objectUtils.js";
-import { $percentage, $sumOf } from "../utils/mongodbUtils.js";
+import { $computeTauxStats, $valeursStats } from "../utils/mongodbUtils.js";
 import { isEmpty } from "lodash-es";
-import { convertStatsNames } from "./statsNames.js";
 
-export async function getCFDStats(cfd, millesime) {
-  const results = await certificationsStats()
+export async function getCFDStats(collection, cfd, millesime) {
+  const results = await collection
     .aggregate([
       {
         $match: { code_formation_diplome: cfd, ...(millesime ? { millesime } : {}) },
@@ -20,23 +18,12 @@ export async function getCFDStats(cfd, millesime) {
           filiere: { $first: "$filiere" },
           millesime: { $first: "$millesime" },
           diplome: { $first: "$diplome" },
-          ...convertStatsNames({ prefix: "nb_" }, (statName) => $sumOf(`$${statName}`)),
+          ...$valeursStats(),
         },
       },
       {
-        $replaceRoot: {
-          newRoot: {
-            $mergeObjects: [
-              "$$ROOT",
-              {
-                taux_poursuite_etudes: $percentage("$nb_poursuite_etudes", "$nb_annee_term"),
-                ...convertStatsNames({ prefix: "taux_emploi" }, (statName) => {
-                  const suffix = statName.replace(/taux_emploi_/, "");
-                  return $percentage(`$nb_en_emploi_${suffix}`, "$nb_sortant");
-                }),
-              },
-            ],
-          },
+        $addFields: {
+          ...$computeTauxStats(),
         },
       },
       {
