# server/src/http/routes/certificationsRoutes.js
@@ -12,7 +12,7 @@ import { compose, transformIntoCSV, transformIntoJSON } from "oleoduc";
 import Boom from "boom";
 import { getCFDStats, sendCFDStats } from "../../common/stats/cfd.js";
 import { findCodeFormationDiplome } from "../../common/bcn.js";
-import { convertStatsNames } from "../../common/stats/statsNames.js";
+import { convertStats, ALL } from "../../common/stats/stats.js";
 
 export default () => {
   const router = express.Router();
@@ -24,15 +24,12 @@ export default () => {
       const { millesimes, code_certifications, page, items_par_page, ext } = await validate(
         { ...req.query, ...req.params },
         {
-          millesimes: arrayOf(Joi.string().required()).default([]),
-          code_certifications: arrayOf(Joi.string().required()).default([]),
-          ...validators.exports(),
-          ...validators.pagination(),
+          ...validators.statsList(),
         }
       );
 
       let { find, pagination } = await findAndPaginate(
-        "certificationsStats",
+        certificationsStats(),
         {
           ...(millesimes.length > 0 ? { millesime: { $in: millesimes.map(formatMillesime) } } : {}),
           ...(code_certifications.length > 0 ? { code_certification: { $in: code_certifications } } : {}),
@@ -52,7 +49,7 @@ export default () => {
             code_certification: (f) => f.code_certification,
             filiere: (f) => f.filiere,
             millesime: (f) => f.millesime,
-            ...convertStatsNames({}, (statName) => (f) => f[statName]),
+            ...convertStats(ALL, (statName) => (f) => f[statName]),
           },
         });
       } else {
@@ -77,14 +74,14 @@ export default () => {
         {
           codes_certifications: arrayOf(Joi.string().required()).default([]).min(1),
           millesime: Joi.string(),
-          vue: Joi.string().valid("cfd"),
+          ...validators.vues(),
           ...validators.svg(),
         }
       );
 
       if (vue === "cfd" || codes_certifications.length > 1) {
         const cfd = await findCodeFormationDiplome(codes_certifications[0]);
-        const cfdStats = await getCFDStats(cfd, millesime);
+        const cfdStats = await getCFDStats(certificationsStats(), cfd, millesime);
         return sendCFDStats(cfdStats, res, options);
       }
 
@@ -100,7 +97,7 @@ export default () => {
       }
 
       const stats = results[0];
-      return sendStats(stats, res, options);
+      return sendStats("certification", stats, res, options);
     })
   );
 
