# server/src/http/routes/formationsRoutes.js
@@ -10,7 +10,7 @@ import { formatMillesime } from "../utils/formatters.js";
 import Boom from "boom";
 import { compose, transformIntoCSV, transformIntoJSON } from "oleoduc";
 import { formationsStats } from "../../common/db/collections/collections.js";
-import { convertStatsNames } from "../../common/stats/statsNames.js";
+import { convertStats } from "../../common/stats/stats.js";
 
 export default () => {
   const router = express.Router();
@@ -19,7 +19,7 @@ export default () => {
     "/api/inserjeunes/formations.:ext?",
     checkApiKey(),
     tryCatch(async (req, res) => {
-      const { uais, millesimes, code_certifications, page, items_par_page, ext } = await validate(
+      const { uais, regions, millesimes, code_certifications, page, items_par_page, ext } = await validate(
         { ...req.query, ...req.params },
         {
           uais: arrayOf(
@@ -27,17 +27,16 @@ export default () => {
               .pattern(/^[0-9]{7}[A-Z]{1}$/)
               .required()
           ).default([]),
-          millesimes: arrayOf(Joi.string().required()).default([]),
-          code_certifications: arrayOf(Joi.string().required()).default([]),
-          ...validators.exports(),
-          ...validators.pagination(),
+          ...validators.regions(),
+          ...validators.statsList(),
         }
       );
 
       let { find, pagination } = await findAndPaginate(
-        "formationsStats",
+        formationsStats(),
         {
           ...(uais.length > 0 ? { uai: { $in: uais } } : {}),
+          ...(regions.length > 0 ? { "region.code": { $in: regions } } : {}),
           ...(millesimes.length > 0 ? { millesime: { $in: millesimes.map(formatMillesime) } } : {}),
           ...(code_certifications.length > 0 ? { code_certification: { $in: code_certifications } } : {}),
         },
@@ -57,7 +56,7 @@ export default () => {
             code_certification: (f) => f.code_certification,
             filiere: (f) => f.filiere,
             millesime: (f) => f.millesime,
-            ...convertStatsNames({}, (statName) => (f) => f[statName]),
+            ...convertStats({}, (statName) => (f) => f[statName]),
           },
         });
       } else {
@@ -103,7 +102,7 @@ export default () => {
       }
 
       const stats = results[0];
-      return sendStats(stats, res, { direction, theme, ext });
+      return sendStats("formation", stats, res, { direction, theme, ext });
     })
   );
 
